--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -39,7 +39,8 @@ body {
       border: 0.5px solid gray;
       object-fit: cover;
       margin-right: 10px; /* Adjust the margin as needed */
-      width: "20px"; height:"20px";
+      width: "20"; 
+      height:"20";
     }
 
 .nav > .nav-btn {
