--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -21,6 +21,7 @@ body {
   width: 100%;
   background-color: #4d4d4d;
   position: relative;
+  border-bottom: 0.5px solid gray;
 }
 
     .nav > .nav-header {
