--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -38,7 +38,11 @@ body {
   padding: 10px 10px 10px 10px;
 }
     .nav > .nav-header > .nav-icon {
-      border-radius: 50px;
+     /* border-radius: 50px;*/
+      border-top: 50px;
+      border-left: 50px;
+      border-right: 50px;
+      border-bottom: 20px;
       border: 0.5px solid gray;
       object-fit: cover;
       margin-right: 10px; /* Adjust the margin as needed */
