--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -39,10 +39,10 @@ body {
 }
     .nav > .nav-header > .nav-icon {
      /* border-radius: 50px;*/
-      border-top: 50px;
-      border-left: 50px;
-      border-right: 50px;
-      border-bottom: 20px;
+      border-top-left-radius: 50% 50%;
+      border-top-right-radius: 50% 50%;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
       border: 0.5px solid gray;
       object-fit: cover;
       margin-right: 10px; /* Adjust the margin as needed */
