--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -39,8 +39,8 @@ body {
 }
     .nav > .nav-header > .nav-icon {
      /* border-radius: 50px;*/
- /*     border-top-left-radius: 50px;
-      border-top-right-radius: 50px;
+      border-top-left-radius: 50px;
+  /*    border-top-right-radius: 50px;
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;*/
       border: 0.5px solid gray;
