--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -39,13 +39,9 @@ body {
 }
     .nav > .nav-header > .nav-icon {  
       border-radius: 50%;
- /*   border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;*/
       border: 0.5px solid gray;
       object-fit: cover;
-      margin-right: 10px; /* Adjust the margin as needed */
+      margin-right: -3px;
       width: "20"; 
       height:"20";
     }
@@ -56,8 +52,10 @@ body {
 
 .nav > .nav-links {
   display: inline;
-  float: right;
+  float: middle;
   font-size: 18px;
+  text-align: center;
+  background-color: #333333;
 }
 
 .nav > .nav-links > a {
@@ -65,6 +63,9 @@ body {
   padding: 13px 10px 13px 10px;
   text-decoration: none;
   color: #efefef;
+  margin-bottom: 2px;
+  border-radius: 8px;
+  border: 0.5px solid white;
 }
 
 .nav > .nav-links > a:hover {
