--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -6,7 +6,7 @@ html {
   width: 100%;
 }
 body {
-  background-color: #1a1a1a;
+  background-color: #2e2e2e;
   color: #ffffff;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -122,3 +122,18 @@ body {
     overflow-y: auto;
   }
 /*}*/
+.line {
+  width: 90%; height: 1px; margin: 0 auto; border: 1px solid gray; align-self: center; align-content: center;
+}
+
+.pro-ttle {
+  display: inline-block;
+  margin-top: 0.7em;
+  font-size: 2.1em;
+  margin-left: 10px;
+}
+.abt-para-pro {
+  margin-top: 0.3em;
+  margin-left: 30px;
+  font-size: 1.5em;
+}
