--- a/css/badge.css
+++ b/css/badge.css
@@ -59,11 +59,11 @@ padding-bottom: 0.125rem;
 padding-left: 0.625rem;
 padding-right: 0.625rem; 
 border-radius: 0.25rem;
-border: 1px solid #fc03b1;
+border: 1px solid #00ecf0;
 font-size: 0.7em;
 line-height: 1rem; 
 font-weight: 500; 
-color: #fc03b1; 
-background-color: rgba(252, 3, 177, 0.25); 
+color: #00ecf0; 
+background-color: rgba(0, 236, 240, 0.19); 
   /*252, 3, 177   #fc03b1*/
   }
