--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -137,3 +137,32 @@ body {
   margin-left: 30px;
   font-size: 1.5em;
 }
+
+  #cookie-consent {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  padding: 10px;
+  background-color: #f1f1f1;
+  border: 1px solid #ddd;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100vw - 20px);
+  max-width: 500px; /* Adjust max-width as needed */
+}
+
+#cookie-consent a {
+  text-decoration: none;
+  color: #333;
+}
+
+#cookie-consent button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #2196F3;
+  color: #fff;
+  cursor: pointer;
+}
